feat: database writing and table creation is successful